k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-javalin
  namespace: default
  labels:
    app: hello-javalin
spec:
  type: LoadBalancer          # Exposes the app via an AWS ELB
  selector:
    app: hello-javalin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 7100
